{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 289,
  "lineage": "dda8f830-7b56-9808-6bde-9c728697adcc",
  "resources": [
    {
      "module": "module.ec2_linux",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01cb8278802ab6258",
            "arn": "arn:aws:ec2:eu-west-1:795065744175:instance/i-025740174cad34f48",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-025740174cad34f48",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-keypair-01",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0aab20ff88390c630",
            "private_dns": "ip-192-168-0-79.eu-west-1.compute.internal",
            "private_ip": "192.168.0.79",
            "public_ip": "34.244.111.9",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0f3e68a57e1633686",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08d730ce835be903e",
            "tags": {
              "Name": "linux_instance",
              "name": "ec2-linux",
              "project": "trrfrm"
            },
            "tags_all": {
              "Name": "linux_instance",
              "name": "ec2-linux",
              "project": "trrfrm"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "volume_tags": {
              "Name": "linux_instance"
            },
            "vpc_security_group_ids": [
              "sg-09f149e38e594df3d"
            ]
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_ami.amazon_ami",
            "data.aws_availability_zones.az-available",
            "module.public_security_group.aws_security_group.this",
            "module.public_security_group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.private_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:795065744175:security-group/sg-0a473c0f3a642e619",
            "description": "Security Group managed by Terraform",
            "egress": [],
            "id": "sg-0a473c0f3a642e619",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Ingress Rule",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09f149e38e594df3d"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "trrfrm-private-sg-20211027083729711800000007",
            "name_prefix": "trrfrm-private-sg-",
            "owner_id": "795065744175",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "trrfrm-private-sg",
              "project": "trrfrm"
            },
            "tags_all": {
              "Name": "trrfrm-private-sg",
              "project": "trrfrm"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0ac1822f85120cc3a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.private_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Ingress Rule",
            "from_port": 3306,
            "id": "sgrule-2204217329",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a473c0f3a642e619",
            "self": false,
            "source_security_group_id": "sg-09f149e38e594df3d",
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_security_group.aws_security_group.this",
            "module.public_security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "module.private_security_group.aws_security_group.this",
            "module.private_security_group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.public_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:795065744175:security-group/sg-09f149e38e594df3d",
            "description": "Inbound HTTP/HTTPS for all, SSH for my IP",
            "egress": [],
            "id": "sg-09f149e38e594df3d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "176.106.217.78/32"
                ],
                "description": "Ingress Rule",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "trrfrm-public-sg-20211027083729709000000006",
            "name_prefix": "trrfrm-public-sg-",
            "owner_id": "795065744175",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "trrfrm-public-sg",
              "project": "trrfrm"
            },
            "tags_all": {
              "Name": "trrfrm-public-sg",
              "project": "trrfrm"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0ac1822f85120cc3a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.public_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-1403125871",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-09f149e38e594df3d",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_security_group.aws_security_group.this",
            "module.public_security_group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.public_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-1766428691",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09f149e38e594df3d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_security_group.aws_security_group.this",
            "module.public_security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-124699109",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09f149e38e594df3d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_security_group.aws_security_group.this",
            "module.public_security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "176.106.217.78/32"
            ],
            "description": "Ingress Rule",
            "from_port": 22,
            "id": "sgrule-789703236",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09f149e38e594df3d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_security_group.aws_security_group.this",
            "module.public_security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:795065744175:internet-gateway/igw-079c545379c04a48c",
            "id": "igw-079c545379c04a48c",
            "owner_id": "795065744175",
            "tags": {
              "Name": "trrfrm-vpc",
              "project": "trrfrm"
            },
            "tags_all": {
              "Name": "trrfrm-vpc",
              "project": "trrfrm"
            },
            "vpc_id": "vpc-0ac1822f85120cc3a"
          },
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-079c545379c04a48c",
            "id": "r-rtb-091641bdb9405b5751080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-091641bdb9405b575",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:795065744175:route-table/rtb-09909ff2b9a701449",
            "id": "rtb-09909ff2b9a701449",
            "owner_id": "795065744175",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "trrfrm-vpc-private-eu-west-1a",
              "project": "trrfrm"
            },
            "tags_all": {
              "Name": "trrfrm-vpc-private-eu-west-1a",
              "project": "trrfrm"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac1822f85120cc3a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.az-available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:795065744175:route-table/rtb-0d52f8066ade3eefa",
            "id": "rtb-0d52f8066ade3eefa",
            "owner_id": "795065744175",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "trrfrm-vpc-private-eu-west-1b",
              "project": "trrfrm"
            },
            "tags_all": {
              "Name": "trrfrm-vpc-private-eu-west-1b",
              "project": "trrfrm"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac1822f85120cc3a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.az-available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:795065744175:route-table/rtb-091641bdb9405b575",
            "id": "rtb-091641bdb9405b575",
            "owner_id": "795065744175",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-079c545379c04a48c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "trrfrm-vpc-public",
              "project": "trrfrm"
            },
            "tags_all": {
              "Name": "trrfrm-vpc-public",
              "project": "trrfrm"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac1822f85120cc3a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df20894909dd449e",
            "route_table_id": "rtb-09909ff2b9a701449",
            "subnet_id": "subnet-05c52bbb2d4eca76a"
          },
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.az-available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b2e533b860579e2",
            "route_table_id": "rtb-0d52f8066ade3eefa",
            "subnet_id": "subnet-0cbbbed20c8ce7afd"
          },
          "dependencies": [
            "data.aws_availability_zones.az-available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d31a1df3bbd1f2b9",
            "route_table_id": "rtb-091641bdb9405b575",
            "subnet_id": "subnet-08d730ce835be903e"
          },
          "dependencies": [
            "data.aws_availability_zones.az-available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:795065744175:subnet/subnet-05c52bbb2d4eca76a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-05c52bbb2d4eca76a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "795065744175",
            "tags": {
              "Name": "trrfrm-vpc-private-eu-west-1a",
              "project": "trrfrm"
            },
            "tags_all": {
              "Name": "trrfrm-vpc-private-eu-west-1a",
              "project": "trrfrm"
            },
            "vpc_id": "vpc-0ac1822f85120cc3a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.az-available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:795065744175:subnet/subnet-0cbbbed20c8ce7afd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "192.168.3.0/24",
            "id": "subnet-0cbbbed20c8ce7afd",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "795065744175",
            "tags": {
              "Name": "trrfrm-vpc-private-eu-west-1b",
              "project": "trrfrm"
            },
            "tags_all": {
              "Name": "trrfrm-vpc-private-eu-west-1b",
              "project": "trrfrm"
            },
            "vpc_id": "vpc-0ac1822f85120cc3a"
          },
          "dependencies": [
            "data.aws_availability_zones.az-available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:795065744175:subnet/subnet-08d730ce835be903e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-08d730ce835be903e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "795065744175",
            "tags": {
              "Name": "trrfrm-vpc-public-eu-west-1a",
              "project": "trrfrm"
            },
            "tags_all": {
              "Name": "trrfrm-vpc-public-eu-west-1a",
              "project": "trrfrm"
            },
            "vpc_id": "vpc-0ac1822f85120cc3a"
          },
          "dependencies": [
            "data.aws_availability_zones.az-available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:795065744175:vpc/vpc-0ac1822f85120cc3a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/22",
            "default_network_acl_id": "acl-054a3a244d9859bd8",
            "default_route_table_id": "rtb-0635490dab3966074",
            "default_security_group_id": "sg-0f549c3bf90d50e27",
            "dhcp_options_id": "dopt-33435c55",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0ac1822f85120cc3a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0635490dab3966074",
            "owner_id": "795065744175",
            "tags": {
              "Name": "trrfrm-vpc",
              "project": "trrfrm"
            },
            "tags_all": {
              "Name": "trrfrm-vpc",
              "project": "trrfrm"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}